chore: fix files for flake8 pre-commit
Signed-off-by: Jennifer Power <barnabei.jennifer@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -65,8 +65,7 @@ repos:
             flake8-bandit,
             dlint  
           ]
-        files: "^(trestle)"
-        exclude: "(oscal/)"
+        files: "^(trestle_fedramp)"
         stages: [commit]
   - repo: https://github.com/executablebooks/mdformat
     rev: 0.7.16
