--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -1,11 +1,7 @@
 name: "Lint PR title"
 
 on:
-  pull_request_target:
-    types:
-      - opened
-      - edited
-      - synchronize
+  pull_request:
     branches:
       - 'main'
       - 'develop'
@@ -16,6 +12,15 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+
+    - name: Check if file exists
+      id: check_file
+      run: |
+        if [ -f "commitlint.config.j" ]; then
+          echo "::set-output name=file_exists::true"
+        else
+          echo "::set-output name=file_exists::false"
+        fi
 
     - name: Install dependencies
       run: npm install @commitlint/cli @commitlint/config-conventional
