--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -2,6 +2,10 @@ name: "Lint PR title"
 
 on:
   pull_request:
+    types:
+      - opened
+      - edited
+      - synchronize
     branches:
       - 'main'
       - 'develop'
