--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ dev =
     setuptools
     wheel
     yapf
-    python-semantic-release==7.33.2
+    python-semantic-release>=9.8.0
     pep8-naming
     pytest-random-order
     python-dateutil
