test: testing semantic release
Signed-off-by: Jennifer Power <barnabei.jennifer@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ default_bump_level = 0
 
 
 [tool.semantic_release.branches.main]
-match = "(main)"
+match = "(fix/release-testing)"
 prerelease_token = "rc"
 prerelease = false
 
