test: tests adding back semantic release to the setup.cfg
Signed-off-by: Jennifer Power <barnabei.jennifer@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,11 @@ dev =
     ## Constrain system
     pylint
 
+[semantic_release]
+version_variable=trestle_fedramp/__init__.py:__version__
+branch = main
+upload_to_pypi = true
+version_source = commit
 
 [flake8]
 # WARNING: This should be kept compatible with .pre-commit-config.yaml
