--- a/.github/workflows/release-testing.yml
+++ b/.github/workflows/release-testing.yml
@@ -93,3 +93,10 @@ jobs:
         with:
             root_options: "-vv"
             github_token: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Publish package distributions to GitHub Releases
+        uses: python-semantic-release/upload-to-gh-release@v9.8.0
+        if: steps.release.outputs.released == 'true'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+    
