--- a/.github/workflows/release-testing.yml
+++ b/.github/workflows/release-testing.yml
@@ -3,6 +3,8 @@ name: Trestle Release Testing
 on:
   workflow_dispatch:
 
+permissions: {}
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
@@ -76,27 +78,55 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
-      contents: write
     environment:
       name: release
       url: https://pypi.org/p/test-pypi-location
     needs: build
     steps:
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
       - uses: actions/checkout@v4
         with:
           submodules: true
           fetch-depth: 0
+          token: ${{ steps.app-token.outputs.token }}
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+      - name: Install build tools
+        run: |
+          make develop
+
       # This action uses Python Semantic Release v8
       - name: Python Semantic Release
         id: release
         uses: python-semantic-release/python-semantic-release@v9.8.0
         with:
             root_options: "-vv"
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Publish package distributions to GitHub Releases
-        uses: python-semantic-release/upload-to-gh-release@v9.8.0
-        if: steps.release.outputs.released == 'true'
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-    
+            github_token: ${{ steps.app-token.outputs.token }}
+
+      - name: Get GitHub App User ID
+        id: get-user-id
+        run: echo "user-id=$(gh api "/users/${{ env.SLUG }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+          SLUG: ${{ steps.app-token.outputs.app-slug }}
+          
+      - name: Configure Git
+        run: |
+          git config --global user.name '${{ env.SLUG }}[bot]'
+          git config --global user.email '${{ env.ID }}+${{ env.SLUG }}[bot]@users.noreply.github.com'
+        env:
+          SLUG: ${{ steps.app-token.outputs.app-slug }}
+          ID: ${{ steps.get-user-id.outputs.user-id }}
+
+      - name: Example commit and push
+        run: |
+          touch empty_file
+          git add empty_file
+          git commit -m "Create empty file" && git push
+          git push origin
