--- a/.github/workflows/release-testing.yml
+++ b/.github/workflows/release-testing.yml
@@ -101,32 +101,15 @@ jobs:
         run: |
           make develop
 
-      # This action uses Python Semantic Release v8
+       # This action uses Python Semantic Release v8
       - name: Python Semantic Release
         id: release
-        uses: python-semantic-release/python-semantic-release@v9.8.0
+        uses: python-semantic-release/python-semantic-release@v9.8.8
         with:
-            root_options: "-vv"
-            github_token: ${{ steps.app-token.outputs.token }}
+          github_token: ${{ steps.app-token.outputs.token }} 
 
-      - name: Get GitHub App User ID
-        id: get-user-id
-        run: echo "user-id=$(gh api "/users/${{ env.SLUG }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
-        env:
-          GH_TOKEN: ${{ steps.app-token.outputs.token }}
-          SLUG: ${{ steps.app-token.outputs.app-slug }}
-          
-      - name: Configure Git
-        run: |
-          git config --global user.name '${{ env.SLUG }}[bot]'
-          git config --global user.email '${{ env.ID }}+${{ env.SLUG }}[bot]@users.noreply.github.com'
-        env:
-          SLUG: ${{ steps.app-token.outputs.app-slug }}
-          ID: ${{ steps.get-user-id.outputs.user-id }}
-
-      - name: Example commit and push
-        run: |
-          touch empty_file
-          git add empty_file
-          git commit -m "Create empty file" && git push
-          git push origin
+      - name: Publish package distributions to GitHub Releases
+        uses: python-semantic-release/upload-to-gh-release@v9.8.9
+        if: steps.release.outputs.released == 'true'
+        with:
+          github_token: ${{ steps.app-token.outputs.token }}
